<?xml version="1.0"?>
<package format="2">
  <name>tesseract_python_Levi-Armstrong</name>
  <version>0.1.0</version>
  <description>The tesseract_python package</description>
  <maintainer email="wason@wasontech.com">John Wason</maintainer>
  <maintainer email="kevin.warburton@swri.org">Kevin Warburton</maintainer>
  <license>Apache 2.0</license>
  <author >John Wason</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <depend>urdf</depend>
  <depend>srdfdom</depend>
  <depend>pluginlib</depend>
  <depend>interactive_markers</depend>
  <depend>geometric_shapes</depend>
<!--  New stuff that KEVIN is changing below:-->
  <depend>tesseract_geometry</depend>
<!--  <depend>tesseract_ros</depend>-->
<!--  <depend>tesseract_msgs</depend>-->
<!--  tesseract_core no longer a package. It is a folder containing packages-->
<!--  <depend>tesseract_core</depend>-->
<!--  <depend>tesseract_collision</depend>-->
<!--  <depend>tesseract_planning</depend>-->
  <depend>kdl_parser</depend>
  <depend>eigen_conversions</depend>
  <depend>python</depend>
  <depend>python-numpy</depend>
<!--  <depend>trajopt</depend>-->
  <build_depend>swig</build_depend>
  <build_depend>python-dev</build_depend>
</package>
